# asteroid-calendar

./: CMakeLists.txt  EventDialog.qml  MonthSelector.qml  README.md  asteroid-calendar.ca.ts  asteroid-calendar.de.ts  asteroid-calendar.desktop  asteroid-calendar.desktop.template  asteroid-calendar.el.ts  asteroid-calendar.es.ts  asteroid-calendar.fa.ts  asteroid-calendar.fr.ts  asteroid-calendar.hu.ts  asteroid-calendar.in  asteroid-calendar.it.ts  asteroid-calendar.kab.ts  asteroid-calendar.ko.ts  asteroid-calendar.nl.ts  asteroid-calendar.pl.ts  asteroid-calendar.pro  asteroid-calendar.pt_BR.ts  asteroid-calendar.ru.ts  asteroid-calendar.sv.ts  asteroid-calendar.ta.ts  asteroid-calendar.tr.ts  asteroid-calendar.uk.ts  asteroid-calendar.zh_Hans.ts  main.cpp  main.qml
i18n/: asteroid-calendar.ace.ts  asteroid-calendar.ar_AR.ts  asteroid-calendar.ast.ts  asteroid-calendar.az.ts  asteroid-calendar.be.ts  asteroid-calendar.bqi.ts  asteroid-calendar.ca.ts  asteroid-calendar.cs.ts  asteroid-calendar.da.ts  asteroid-calendar.de.ts  asteroid-calendar.de_DE.ts  asteroid-calendar.desktop.h  asteroid-calendar.el.ts  asteroid-calendar.en_GB.ts  asteroid-calendar.eo.ts  asteroid-calendar.es.ts  asteroid-calendar.es_AR.ts  asteroid-calendar.eu.ts  asteroid-calendar.fa.ts  asteroid-calendar.fi.ts  asteroid-calendar.fr.ts  asteroid-calendar.gl.ts  asteroid-calendar.he.ts  asteroid-calendar.hi.ts  asteroid-calendar.hr.ts  asteroid-calendar.hu.ts  asteroid-calendar.ia.ts  asteroid-calendar.id.ts  (+36 more)
src/: CMakeLists.txt  EventDialog.qml  MonthSelector.qml  main.qml  resources.qrc
